<?xml version="1.0"?>
<package format="3">
  <name>net_cam</name>
  <version>1.0.0</version>
  <description>The infinite sense camera package</description>
  <maintainer email="www.qq837374741@foxmail.com">infinite sense</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
     <build_type>ament_cmake</build_type>
  </export>
  
</package>



